--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,3 +7,10 @@ appTitle=App Title
 
 #YDES: Application description
 appDescription=A Fiori application.
+#XFLD,24:
+apptitle=appTitle
+
+#XTIT
+Product.table.header=Product
+
+
